<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homescreen.HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="@dimen/dimen_zero"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:titleTextColor="@color/textColorWhite" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/svParent"
        android:layout_width="@dimen/dimen_zero"
        android:layout_height="@dimen/dimen_zero"
        app:layout_constraintBottom_toTopOf="@id/btnProject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="@dimen/company_logo_default_size"
                android:layout_height="@dimen/company_logo_default_size"
                android:layout_margin="@dimen/margin_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="@dimen/dimen_zero"
                android:layout_height="@dimen/dimen_zero"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_xx_large"
                app:layout_constraintBottom_toBottomOf="@+id/ivLogo"
                app:layout_constraintEnd_toStartOf="@+id/ivLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivLogo"
                tools:text="The lean apps" />

            <TextView
                android:id="@+id/tvStartDate"
                style="@style/testStyleDesc"
                android:drawableTop="@drawable/ic_start_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLogo"
                tools:text="march 2018" />

            <TextView
                android:id="@+id/tvDuration"
                style="@style/testStyleDesc"
                android:layout_marginStart="@dimen/margin_x_small"
                android:layout_marginEnd="@dimen/margin_x_small"
                android:drawableStart="@drawable/drawable_line"
                android:drawableEnd="@drawable/drawable_line"
                android:drawablePadding="@dimen/padding_small"
                app:layout_constraintBottom_toBottomOf="@+id/tvStartDate"
                app:layout_constraintEnd_toStartOf="@+id/tvEndDate"
                app:layout_constraintStart_toEndOf="@+id/tvStartDate"
                app:layout_constraintTop_toTopOf="@+id/tvStartDate"
                tools:text="2 years" />

            <TextView
                android:id="@+id/tvEndDate"
                style="@style/testStyleDesc"
                android:drawableTop="@drawable/ic_end_date"
                app:layout_constraintBottom_toBottomOf="@+id/tvStartDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvStartDate"
                tools:text="Aug 2019" />

            <TextView
                android:id="@+id/tvDesignationTitle"
                style="@style/testStyleSubtitle"
                android:text="@string/designation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvStartDate" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDesignation"
                style="@style/cardStyleDefault"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDesignationTitle">

                <TextView
                    android:id="@+id/tvDesignation"
                    style="@style/textStyleContent"
                    tools:text="This is a dummy text" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvRoleTitle"
                style="@style/testStyleSubtitle"
                android:text="@string/roles_and_responsibility"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvDesignation" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvRole"
                style="@style/cardStyleDefault"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRoleTitle">

                <TextView
                    android:id="@+id/tvRole"
                    style="@style/textStyleContent"
                    tools:text="This is a dummy text" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnProject"
        android:layout_width="@dimen/dimen_zero"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="onClickProjects"
        android:text="@string/projects"
        android:textColor="@color/textColorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/rlProgress"
        android:layout_width="@dimen/dimen_zero"
        android:layout_height="@dimen/dimen_zero"
        android:background="@color/bg_progressbar"
        android:clickable="true"
        android:elevation="@dimen/elevation_default"
        android:layout_centerInParent="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>