...
                android:text="@string/companies_worked_with"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvSkills" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCompanies"
                android:layout_width="@dimen/dimen_zero"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_x_small"
                android:layout_marginTop="@dimen/margin_x_small"
                android:layout_marginEnd="@dimen/margin_x_small"
                android:layout_marginBottom="@dimen/margin_default"
...
